syntax = "proto3";

option go_package = "http_server";

message ReflectionResponse {
  oneof response {
    Reflection reflection = 1;
    Error error = 2;
  }
}

message Reflection {
  repeated string service = 1;
  repeated bytes file_descriptor = 2;
}

message Error {
  string message = 1;
}

message InvokeRequest {
  string method = 1;
  bytes payload = 2;
}

message InvokeResponse {
  oneof response {
    bytes payload = 1;
    Error error = 2;
  }
}